test/corpus/controlflow.txt
================================================================================
Branching written with cf.br, cf.cond_br
================================================================================

func.func @simple(i64, i1) -> i64 {
^bb0(%a: i64, %cond: i1): // Code dominated by ^bb0 may refer to %a
  cf.cond_br %cond, ^bb1, ^bb2

^bb1:
  cf.br ^bb3(%a: i64)    // Branch passes %a as the argument

^bb2:
  %b = arith.addi %a, %a : i64
  cf.br ^bb3(%b: i64)    // Branch passes %b as the argument

// ^bb3 receives an argument, named %c, from predecessors
// and passes it on to bb4 along with %a. %a is referenced
// directly from its defining operation and is not passed through
// an argument of ^bb3.
^bb3(%c: i64):
  cf.br ^bb4(%c, %a : i64, i64)

^bb4(%d : i64, %e : i64):
  %0 = arith.addi %d, %e : i64
  return %0 : i64   // Return is also a terminator.
}

--------------------------------------------------------------------------------

(source_file
  (operation
    (custom_operation
      (op_id
        (bare_id)
        (bare_id))
      (custom_op_body
        (custom_op_full_prefix
          (symbol_ref_id
            (suffix_id)))
        (custom_op_full_prefix
          (custom_parens
            (integer_type)
            (integer_type)))
        (custom_op_full_prefix
          (return_type_annotation
            (non_function_type
              (builtin_type
                (integer_type)))))
        (custom_op_terminal
          (region
            (region_body
              (block
                (block_label
                  (caret_id
                    (suffix_id))
                  (block_arg_list
                    (value_id_and_type
                      (value_id
                        (suffix_id))
                      (type
                        (builtin_type
                          (integer_type))))
                    (value_id_and_type
                      (value_id
                        (suffix_id))
                      (type
                        (builtin_type
                          (integer_type))))))
                (comment)
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix)
                      (custom_op_terminal
                        (caret_successor
                          (caret_id
                            (suffix_id))
                          (caret_id
                            (suffix_id))))))))
              (block
                (block_label
                  (caret_id
                    (suffix_id)))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_safe_prefix
                        (caret_id
                          (suffix_id)))
                      (custom_op_safe_prefix
                        (custom_parens
                          (value_id_and_type
                            (value_id
                              (suffix_id))
                            (type
                              (builtin_type
                                (integer_type))))))))))
              (comment)
              (block
                (block_label
                  (caret_id
                    (suffix_id)))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (integer_type)))))))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_safe_prefix
                        (caret_id
                          (suffix_id)))
                      (custom_op_safe_prefix
                        (custom_parens
                          (value_id_and_type
                            (value_id
                              (suffix_id))
                            (type
                              (builtin_type
                                (integer_type))))))))))
              (comment)
              (comment)
              (comment)
              (comment)
              (comment)
              (block
                (block_label
                  (caret_id
                    (suffix_id))
                  (block_arg_list
                    (value_id_and_type
                      (value_id
                        (suffix_id))
                      (type
                        (builtin_type
                          (integer_type))))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_safe_prefix
                        (caret_id
                          (suffix_id)))
                      (custom_op_safe_prefix
                        (custom_parens
                          (value_use
                            (value_id
                              (suffix_id)))
                          (value_id_and_type
                            (value_id
                              (suffix_id))
                            (type
                              (builtin_type
                                (integer_type))))
                          (integer_type)))))))
              (block
                (block_label
                  (caret_id
                    (suffix_id))
                  (block_arg_list
                    (value_id_and_type
                      (value_id
                        (suffix_id))
                      (type
                        (builtin_type
                          (integer_type))))
                    (value_id_and_type
                      (value_id
                        (suffix_id))
                      (type
                        (builtin_type
                          (integer_type))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (integer_type)))))))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (integer_type)))))))))))
            (comment)))))))

================================================================================
Simple for-loop written with scf.for
================================================================================

func.func @for_loop_with_increasing_arg() -> i1 {
  %c0 = arith.constant 0 : index
  %c1 = arith.constant 1 : index
  %c4 = arith.constant 4 : index
  %c16 = arith.constant 16 : index
  %0 = scf.for %arg0 = %c0 to %c4 step %c1 iter_args(%arg1 = %c0) -> index {
      %10 = arith.addi %arg0, %arg1 : index
      scf.yield %10 : index
  }
  %1 = arith.cmpi ule, %0, %c16 : index
  func.return %1 : i1
}

--------------------------------------------------------------------------------

(source_file
  (operation
    (custom_operation
      (op_id
        (bare_id)
        (bare_id))
      (custom_op_body
        (custom_op_full_prefix
          (symbol_ref_id
            (suffix_id)))
        (custom_op_full_prefix
          (custom_parens))
        (custom_op_full_prefix
          (return_type_annotation
            (non_function_type
              (builtin_type
                (integer_type)))))
        (custom_op_terminal
          (region
            (region_body
              (entry_block
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (integer_literal))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (index_type)))))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (integer_literal))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (index_type)))))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (integer_literal))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (index_type)))))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (integer_literal))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (index_type)))))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (custom_op_kv
                          (value_use
                            (value_id
                              (suffix_id)))
                          (value_use
                            (value_id
                              (suffix_id)))))
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix
                        (bare_id))
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix
                        (bare_id))
                      (custom_op_full_prefix
                        (custom_parens
                          (value_use
                            (value_id
                              (suffix_id)))
                          (value_use
                            (value_id
                              (suffix_id)))))
                      (custom_op_full_prefix
                        (return_type_annotation
                          (non_function_type
                            (builtin_type
                              (index_type)))))
                      (custom_op_terminal
                        (region
                          (region_body
                            (entry_block
                              (operation
                                (op_result_list
                                  (op_result
                                    (value_id
                                      (suffix_id))))
                                (custom_operation
                                  (op_id
                                    (bare_id)
                                    (bare_id))
                                  (custom_op_body
                                    (custom_op_full_prefix
                                      (value_use
                                        (value_id
                                          (suffix_id))))
                                    (custom_op_full_prefix)
                                    (custom_op_full_prefix
                                      (value_use
                                        (value_id
                                          (suffix_id))))
                                    (custom_op_terminal
                                      (type_annotation
                                        (type_list_no_parens
                                          (type
                                            (builtin_type
                                              (index_type)))))))))
                              (operation
                                (custom_operation
                                  (op_id
                                    (bare_id)
                                    (bare_id))
                                  (custom_op_body
                                    (custom_op_full_prefix
                                      (value_use
                                        (value_id
                                          (suffix_id))))
                                    (custom_op_terminal
                                      (type_annotation
                                        (type_list_no_parens
                                          (type
                                            (builtin_type
                                              (index_type))))))))))))))))
                (operation
                  (op_result_list
                    (op_result
                      (value_id
                        (suffix_id))))
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (index_type)))))))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (type_annotation
                          (type_list_no_parens
                            (type
                              (builtin_type
                                (integer_type)))))))))))))))))

================================================================================
Nested for-loop written using scf.for
================================================================================

func.func @std_for(%arg0 : index, %arg1 : index, %arg2 : index) {
  scf.for %i0 = %arg0 to %arg1 step %arg2 {
    scf.for %i1 = %arg0 to %arg1 step %arg2 {
      %min_cmp = arith.cmpi slt, %i0, %i1 : index
      %min = arith.select %min_cmp, %i0, %i1 : index
      %max_cmp = arith.cmpi sge, %i0, %i1 : index
      %max = arith.select %max_cmp, %i0, %i1 : index
      scf.for %i2 = %min to %max step %i1 {
      }
    }
  }
  return
}

--------------------------------------------------------------------------------

(source_file
  (operation
    (custom_operation
      (op_id
        (bare_id)
        (bare_id))
      (custom_op_body
        (custom_op_full_prefix
          (symbol_ref_id
            (suffix_id)))
        (custom_op_full_prefix
          (custom_parens
            (value_id_and_type
              (value_id
                (suffix_id))
              (type
                (builtin_type
                  (index_type))))
            (value_id_and_type
              (value_id
                (suffix_id))
              (type
                (builtin_type
                  (index_type))))
            (value_id_and_type
              (value_id
                (suffix_id))
              (type
                (builtin_type
                  (index_type))))))
        (custom_op_terminal
          (region
            (region_body
              (entry_block
                (operation
                  (custom_operation
                    (op_id
                      (bare_id)
                      (bare_id))
                    (custom_op_body
                      (custom_op_full_prefix
                        (custom_op_kv
                          (value_use
                            (value_id
                              (suffix_id)))
                          (value_use
                            (value_id
                              (suffix_id)))))
                      (custom_op_full_prefix)
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_full_prefix
                        (bare_id))
                      (custom_op_full_prefix
                        (value_use
                          (value_id
                            (suffix_id))))
                      (custom_op_terminal
                        (region
                          (region_body
                            (entry_block
                              (operation
                                (custom_operation
                                  (op_id
                                    (bare_id)
                                    (bare_id))
                                  (custom_op_body
                                    (custom_op_full_prefix
                                      (custom_op_kv
                                        (value_use
                                          (value_id
                                            (suffix_id)))
                                        (value_use
                                          (value_id
                                            (suffix_id)))))
                                    (custom_op_full_prefix)
                                    (custom_op_full_prefix
                                      (value_use
                                        (value_id
                                          (suffix_id))))
                                    (custom_op_full_prefix
                                      (bare_id))
                                    (custom_op_full_prefix
                                      (value_use
                                        (value_id
                                          (suffix_id))))
                                    (custom_op_terminal
                                      (region
                                        (region_body
                                          (entry_block
                                            (operation
                                              (op_result_list
                                                (op_result
                                                  (value_id
                                                    (suffix_id))))
                                              (custom_operation
                                                (op_id
                                                  (bare_id)
                                                  (bare_id))
                                                (custom_op_body
                                                  (custom_op_full_prefix
                                                    (bare_id))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_terminal
                                                    (type_annotation
                                                      (type_list_no_parens
                                                        (type
                                                          (builtin_type
                                                            (index_type)))))))))
                                            (operation
                                              (op_result_list
                                                (op_result
                                                  (value_id
                                                    (suffix_id))))
                                              (custom_operation
                                                (op_id
                                                  (bare_id)
                                                  (bare_id))
                                                (custom_op_body
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_terminal
                                                    (type_annotation
                                                      (type_list_no_parens
                                                        (type
                                                          (builtin_type
                                                            (index_type)))))))))
                                            (operation
                                              (op_result_list
                                                (op_result
                                                  (value_id
                                                    (suffix_id))))
                                              (custom_operation
                                                (op_id
                                                  (bare_id)
                                                  (bare_id))))
                                            (operation
                                              (custom_operation
                                                (op_id
                                                  (bare_id))
                                                (custom_op_body
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_terminal
                                                    (type_annotation
                                                      (type_list_no_parens
                                                        (type
                                                          (builtin_type
                                                            (index_type)))))))))
                                            (operation
                                              (op_result_list
                                                (op_result
                                                  (value_id
                                                    (suffix_id))))
                                              (custom_operation
                                                (op_id
                                                  (bare_id)
                                                  (bare_id))
                                                (custom_op_body
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_terminal
                                                    (type_annotation
                                                      (type_list_no_parens
                                                        (type
                                                          (builtin_type
                                                            (index_type)))))))))
                                            (operation
                                              (custom_operation
                                                (op_id
                                                  (bare_id)
                                                  (bare_id))
                                                (custom_op_body
                                                  (custom_op_full_prefix
                                                    (custom_op_kv
                                                      (value_use
                                                        (value_id
                                                          (suffix_id)))
                                                      (value_use
                                                        (value_id
                                                          (suffix_id)))))
                                                  (custom_op_full_prefix)
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (custom_op_full_prefix
                                                    (bare_id))
                                                  (custom_op_full_prefix
                                                    (value_use
                                                      (value_id
                                                        (suffix_id))))
                                                  (dictionary_attribute))))))))))))))))))
                (operation
                  (custom_operation
                    (op_id
                      (bare_id))))))))))))

================================================================================
Conditional written with scf.if and scf.yield
================================================================================

func.func @std_if_yield(%arg0: i1, %arg1: f32)
{
  %x, %y = scf.if %arg0 -> (f32, f32) {
    %0 = arith.addf %arg1, %arg1 : f32
    %1 = arith.subf %arg1, %arg1 : f32
    scf.yield %0, %1 : f32, f32
  } else {
    %0 = arith.subf %arg1, %arg1 : f32
    %1 = arith.addf %arg1, %arg1 : f32
    scf.yield %0, %1 : f32, f32
  }
  return
}

--------------------------------------------------------------------------------
